--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="home_tab_item_title_kendo">剑道</string>
+    <string name="home_tab_item_title_kendo_life">剑道生活</string>
+    <string name="home_tab_item_title_kendo_news">剑道新闻</string>
+
+
 </resources>
